# dial-auto

./: .gitignore  Cargo.toml  README.md  build.rs  dial-auto.sln
dial-auto/: MainForm.Designer.cs  MainForm.cs  Program.cs  dial-auto.csproj
dial-auto-svc/: Program.cs  Service1.Designer.cs  Service1.cs  dial-auto-svc.csproj
dial-auto-svc/Properties/: AssemblyInfo.cs
dial-auto/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
rust/dial-auto/: Cargo.toml
rust/dial-auto/svc/: Cargo.toml
rust/dial-auto/svc/src/: main.rs
src/: main.rs
svc/: .env  .gitignore  Cargo.toml  build.rs
svc/src/: main.rs
