[package]
name = "dial-auto"
version = "0.1.0"
authors = ["Andrew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [ "svc" ]

[dependencies]
systray = { git = "https://github.com/ademonov/systray-rs.git" }
winapi = "0.3"
user32-sys = "*"
kernel32-sys = "*"